src/component/calendar/snapshots/envision__component__calendar__view_tests__view_narrow_area.snap
---
source: src/component/calendar/view_tests.rs
expression: terminal.backend().to_string()
---
┌ March 2┐
│ Su  Mo │
│  1   2 │
│  8   9 │
└────────┘
